# untree

./: Cargo.toml  LICENSE.txt  README.md  dist-workspace.toml
.github/workflows/: release.yml
example/: iter_tree.rs
inputs/: test1.tree
lib/: add_context.rs  collapse.rs  context_error.rs  context_pair.rs  either.rs  errors.rs  functions.rs  mod.rs  more_context.rs  path_action.rs  path_context.rs  state.rs  supply_missing.rs  tree_iterator.rs  types.rs
src/: lib.rs  macros.rs  main.rs  traits.rs  types.rs
