[package]
authors = ["Alecto Irene Perez <perez.cs@pm.me>"]
description = """untree inverts the action of tree. \
    It allows you to create directory trees from a textual \
    representation of the tree."""
edition = "2021"
license = "MIT"
name = "untree"
version = "0.9.9"
homepage = "https://github.com/codeinred/untree"
repository = "https://github.com/codeinred/untree"
documentation = "https://docs.rs/untree"
readme = "README.md"

# Exclude media and input files from crate
exclude = ["media/", "inputs/"]


[lib]
name = "untree"
path = "lib/mod.rs"

[[bin]]
name = "untree"
path = "src/main.rs"
required-features = ["build-binary"]

# Building the binary requires clap
[features]
default = ["build-binary"]
build-binary = ["clap"]

[dependencies]
colored = "2"
quick-error = "2"
textwrap = "0.14"
embed-doc-image = "0.1"
clap = { version = "3.0.13", features = [
    "derive",
    "wrap_help",
], optional = true, git = "https://github.com/codeinred/clap", branch = "colors" }
